# Study-in-free-time

./: CMakeLists.txt  README.md  get_txt.py  main.cpp  pcb.yml
09-mtcnn/: My_net.py  datas_loader.py  datas_pre.py  detects.py  train.py  train_o.py  train_p.py  train_r.py  utils.py
09-mtcnn/params/: 6.pth  66.pth  666.pth
FIXME_try_nlp/: 6.py  MyData.py  input_sentence_test.py  net.py  trainer.py
Working-Item--DBface-Densenet121-/: face_video.py  my_train.py  requirements.txt  test.ipynb
Working-Item--DBface-Densenet121-/datas/: Obtain_face_image.py  calculate_mean_std.py  get_data.py
Working-Item--DBface-Densenet121-/logs/: events.out.tfevents.1694177463.XianYang.13820.0
Working-Item--DBface-Densenet121-/my_loss/: arc_loss.py  center_loss.py  test.py
Working-Item--DBface-Densenet121-/utils/: DBFace.py  common.py  db_pro.py
my_example/config/: config.prototxt  config_out.prototxt
my_example/dataset/: test.tar
my_example/model/: ball.joint
myyolo/: MyDatasets1.py  Net_Module.py  TrainNet1.py  cfg.py  detector1.py  tool2.py
myyolo/data/: Parse_label.txt  Parse_xml.py  label_test.py  picture_process.py
seg_chip_dataset/: My_get_chip_data.py  ReadMe.md  chip_data_trainer.py  rename.py
train_voc_use_U2net/: MyU2Net.py  VOC_Dataset.py  VOC_train_use_U2net.py
train_voc_use_Unet/: MyUnet.py  VOC_Dataset.py  VOC_train_use_Unet.py
try_nlp/: MyData.py  calculate_acc.py  net.py  trainer.py  use_Tokenizer.py
try_nlp/data/: ChnSentiCorp.csv
try_nlp/params/: 12bert.pth
yolov5-bone_age/: detect.py  train.py
yolov5-bone_age/data/: bone_age_data.yaml
(+8 files in other folders)
